deploy/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  selector: { app: web }
  ports:
    - port: 8080
      targetPort: 3000
